--- a/assets/scss/variables/variables.scss
+++ b/assets/scss/variables/variables.scss
@@ -185,7 +185,7 @@ $grid-gutter-widths: (
 // Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$font-family-serif:      'Montserrat', Georgia, "Times New Roman", Times, serif;
+$font-family-serif:      'Source Sans Pro';
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
 
