--- a/src/scss/core/variables/_variables.scss
+++ b/src/scss/core/variables/_variables.scss
@@ -185,8 +185,10 @@ $grid-gutter-widths: (
 //
 // Font, line-height, and color for body text, headings, and more.
 
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400&subset=cyrillic-ext');
+
 $font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$font-family-serif:      'Montserrat', Georgia, "Times New Roman", Times, serif;
+$font-family-serif:      'Source Sans Pro';
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
 
