--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,90 @@
-#all-tasks-list {
-  .media-heading
+@import "../../assets/scss/variables/variables";
+
+svg:not(:root) {
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
 }
+
+.svg-image {
+  display: inline-block;
+}
+
+.card-header + .card-body > .card-block {
+  padding-top: 0;
+}
+
+.fa {
+  &.icon-bg-circle {
+    position: relative;
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+    vertical-align: middle;
+
+    &::before {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      transform: translate(-50%,-50%);
+    }
+  }
+}
+
+.borderless td, .borderless th {
+  border: none;
+}
+
+.progress-yellow {
+  background-color: #F9A825 !important;
+}
+
+.progress-teal {
+  background-color: #26A69A !important;
+}
+
+#all-tasks-list {
+  .media-heading {
+    font-family: $font-family-title;
+    font-weight: 700;
+    display: inline-block;
+    margin-left: 0.5rem;
+  }
+
+  .svg-image {
+    width: 35px;
+    height: 35px;
+  }
+
+  table {
+    td {
+      padding: 0.5rem 0;
+      vertical-align: middle;
+    }
+
+    td + td {
+      padding-left: 1rem;
+    }
+
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
+#fund-list {
+  figure {
+    .card-block {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      a {
+        display: block;
+        text-align: center;
+      }
+    }
+  }
+}
+
