--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,32 @@
 @import "../../assets/scss/variables/variables";
 
+/*
+X - equal to the letter-tracking value in Photoshop
+S - the font-size in pixels
+*/
+@mixin letter-spacing($x, $s) {
+  letter-spacing: $x * $s / 1000 * 1px;
+}
+
+@mixin rft($mysizeValue-min, $mysizeValue-max) {
+
+  $delta: $mysizeValue-max - $mysizeValue-min;
+  $step: $delta / 3;
+
+  font-size: $mysizeValue-min * 1px;
+
+  @media (min-width: 768px) {
+    font-size: $mysizeValue-max - $step * 2 * 1px;
+  }
+  @media (min-width: 992px) {
+    font-size: ($mysizeValue-max - $step) * 1px;
+  }
+  @media (min-width: 1200px) {
+    font-size: $mysizeValue-max * 1px;
+  }
+}
+
+
 svg:not(:root) {
   overflow: hidden;
   max-width: 100%;
@@ -34,6 +61,10 @@ svg:not(:root) {
   }
 }
 
+.white {
+  color: white;
+}
+
 .borderless td, .borderless th {
   border: none;
 }
@@ -66,6 +97,26 @@ svg:not(:root) {
 
 .border-primary {
   border: #00B5B8 2px solid;
+}
+
+.card {
+  &.transparent-card {
+    background: transparent;
+  }
+}
+
+nav {
+  &.navbar-fixed {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    border-radius: 0;
+  }
+}
+
+nav.navbar-fixed + .app-content {
+  padding-top: 4rem;
 }
 
 .sidebar .task-desc,
@@ -127,6 +178,95 @@ svg:not(:root) {
       display: inline-block;
       float: left;
       margin-right: 1rem;
+    }
+  }
+}
+
+.steps-page {
+  background: #b7cfd6;
+  background: -moz-radial-gradient(center, ellipse cover, #c2dae1 0%, #96b6c0 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, #c2dae1 0%,#96b6c0 100%);
+  background: radial-gradient(ellipse at center, #c2dae1 0%,#96b6c0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c2dae1', endColorstr='#96b6c0',GradientType=1 );
+
+  .alert-info {
+    background-color: #404E67 !important;
+    border-color: #404E67 !important;
+    color: white;
+
+    border-right-color: rgba(0,0,0,.15)!important;
+
+    p {
+      color: white;
+    }
+
+    button {
+      opacity: 1;
+
+      span {
+        color: white;
+      }
+    }
+  }
+
+  .steps-header {
+    margin-top: 80px;
+  }
+
+  h1 + h3 {
+    text-transform: uppercase;
+    color: white;
+    font-weight: 700;
+    text-align: center;
+    @include rft(35, 56);
+  }
+
+  .steps {
+    display: flex;
+    padding: 80px 80px 40px 160px;
+    position: relative;
+
+    .curved-arrow {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    h5 {
+      display: inline-block;
+      padding: 2px 5px;
+    }
+
+    &.step-2 {
+      padding: 80px 200px 40px 200px;
+
+      .curved-arrow {
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+        left: auto;
+        right: -120px;
+        top: -80px;
+        z-index: -1;
+      }
+
+      .step-text {
+        order: 2;
+      }
+
+      img {
+        order: 1;
+      }
+    }
+
+    &.step-3 {
+      .curved-arrow {
+        top: -80px;
+        z-index: -1;
+      }
     }
   }
 }
