--- a/src/scss/pages/users.scss
+++ b/src/scss/pages/users.scss
@@ -11,7 +11,21 @@
     }
 }
 
+.profile-with-cover {
+    .cover-shadow {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.4);
+    }
+}
+
 .profile-card-with-cover {
+
     .card-profile-image {
         position: absolute;
         top: 130px;
@@ -36,13 +50,22 @@
                     border: 5px solid #fff;
                 }
             }
+
+            .media-left {
+                position: relative;
+                z-index: 9;
+            }
+
             .card-title {
                 color: $white;
                 text-shadow: 1px 1px 4px $gray-dark;
+                font-size: 2rem;
+                margin-top: -10px;
             }
         }
     }
     .navbar-profile {
-        margin-left: 130px;
+        //margin-left: 130px;
+        border-radius: 0;
     }
 }
