--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -86,6 +86,10 @@ svg:not(:root) {
   }
 }
 
+ol li {
+  list-style: decimal;
+}
+
 .ib {
   display: inline-block;
 }
@@ -126,6 +130,16 @@ nav {
   }
 }
 
+.is-sticky {
+  .navbar-horizontal {
+    min-height: 70px;
+  }
+}
+
+.navbar-horizontal {
+  border-radius: 0;
+}
+
 .imagebg-box{
   position: relative;
   overflow: hidden;
@@ -164,7 +178,8 @@ nav.navbar-fixed + .app-content {
   .list-group-item {
     padding: 0.25rem 1.25rem;
     border: none;
-    color: #404E67; //todo
+    color: white;
+    background: none;
   }
 }
 
@@ -173,12 +188,17 @@ nav.navbar-fixed + .app-content {
   display: inline-block;
 }
 
+.header-navbar.navbar-brand-center .navbar-header {
+  width: 200px;
+}
+
 .sidebar-detached.sidebar-left.sidebar-sticky {
   z-index: 1 !important; //todo
 }
 
 .sidebar .task-desc,
-#all-tasks-list {
+#all-tasks-list,
+.vip-task {
   table {
     td {
       padding: 0.5rem 0;
@@ -203,6 +223,20 @@ nav.navbar-fixed + .app-content {
   .svg-image {
     width: 35px;
     height: 35px;
+  }
+}
+
+.vip-task {
+  .list-group-item {
+    border: #11B0D0 1px dashed;
+  }
+}
+
+.border {
+  &.b-dashed {
+    &.b-danger {
+      border: 1px #E53935 dashed;
+    }
   }
 }
 
@@ -232,7 +266,7 @@ nav.navbar-fixed + .app-content {
 
 #block-sociallinksblock {
   margin-right: 0.5rem;
-  margin-top: 20px;
+  margin-top: 12px; //todo
 
   ul {
     li {
@@ -300,19 +334,20 @@ nav.navbar-fixed + .app-content {
   background: radial-gradient(ellipse at center, #c2dae1 0%,#96b6c0 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c2dae1', endColorstr='#96b6c0',GradientType=1 );
 
-  $h: 200px;
+  $h: 170px;
 
   .imagebg-box {
     height: $h;
-    background: url(/app-assets/images/pages/index-header.jpg) no-repeat center center;
+    background: url(/app-assets/images/pages/index-header.jpg) no-repeat center top;
     background-size: cover;
-    margin-top: 50px;
+    //margin-top: 50px;
 
     h1 {
-      text-align: center;
-      @include rft(40, 60);
-      @include letter-spacing(60, 30);
+      text-transform: uppercase;
       color: white;
+      text-align: center;
+      font-weight: normal;
+      @include rft(20, 40);
     }
   }
 
@@ -340,7 +375,7 @@ nav.navbar-fixed + .app-content {
     //margin-top: 40px;
   }
 
-  h2 + h3 {
+  h3 {
     text-transform: uppercase;
     color: white;
     font-weight: 700;
@@ -504,6 +539,49 @@ nav.navbar-fixed + .app-content {
   #user-tasks-table > tbody > tr > td:nth-child(5){
     display: none;
   }
+
+  #user-tasks-table > tbody > tr > td {
+    padding-left: 0 !important;
+  }
 }
+
+#user-profile {
+  .nav.navbar-nav {
+    margin-left: 130px;
+
+    button {
+      margin-top: 5px;
+    }
+  }
+
+  .nav-stats {
+    p + p {
+      margin-top: 5px;
+    }
+  }
+}
+
+body.vertical-layout.vertical-menu.menu-collapsed {
+  .hidden-collapsed {
+    display: none;
+  }
+}
+
+.my-gallery {
+  .grid-hover {
+    figure {
+      min-width: 0;
+    }
+  }
+}
+
+.header-navbar.navbar-brand-center .navbar-header {
+  width: 230px;
+}
+
+.nav-login-button {
+  margin-top: 8px;
+}
+
 
 
